Update interface + Ajout bouton ordonnance

--- a/interface client/index.html
+++ b/interface client/index.html
@@ -50,13 +50,10 @@ Utilité : Affichage de la liste des patients
                   <span class="nav_name">Gestion des patients</span> 
                   </a> 
                   <a href="#" class="nav_link"> 
-                  <i class='bx bx-user nav_icon'></i> 
-                  <span class="nav_name">Ajouter un nouveau patient</span> 
+                    <i class='bx bx-user nav_icon'></i> 
+                    <span class="nav_name">Ajouter un nouveau patient</span> 
                   </a> 
-                  <a href="#" class="nav_link"> 
-                  <i class='bx bx-message-square-detail nav_icon'></i> 
-                  <span class="nav_name">Ajouter une nouvelle ordonnance</span> 
-                  </a> <a href="#" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
+                   <a href="#" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
                   <span class="nav_name">Gestion des stocks</span> </a> <a href="#" class="nav_link"> 
                   </a> 
                </div>
@@ -74,7 +71,7 @@ Utilité : Affichage de la liste des patients
                         <th class="column1">Nom et prénom</th>
                         <th class="column2">Pathologie</th>
                         <th class="column3">Numéro de sécurité social</th>
-                        <th class="column5">En voir plus</th>
+                        <th class="column4">En voir plus</th>
                     </tr>
                 </thead>
             </table>
@@ -86,13 +83,15 @@ Utilité : Affichage de la liste des patients
                     <td class="column1">Jon Snow</td>
                     <td class="column2">La tête à tombé de sont corps</td>
                     <td class="column3">2430450832145 17</td>
-                    <td class="column5"><button>fiche patient</button></td>
+                    <td class="column4"><button>fiche patient</button></td>
+                    <td class="column5"><button>Ajouter ordonnance</button></td>
                 </tr>
                 <tr class="row101 body">
                     <td class="column1">Jon Snow</td>
                     <td class="column2">La tête à tombé de sont corps</td>
                     <td class="column3">2430450832145 17</td>
-                    <td class="column5"><button>fiche patient</button></td>
+                    <td class="column4"><button>fiche patient</button></td>
+                    <td class="column5"><button>Ajouter ordonnance</button></td>
                 </tr>
             </tbody>
             </table>
