--- a/interface stock/index.html
+++ b/interface stock/index.html
@@ -53,12 +53,10 @@ Utilité : Affichage de la liste des stocks
                   <i class='bx bx-user nav_icon'></i> 
                   <span class="nav_name">Ajouter un nouveau patient</span> 
                   </a> 
-                  <a href="#" class="nav_link"> 
-                  <i class='bx bx-message-square-detail nav_icon'></i> 
-                  <span class="nav_name">Ajouter une nouvelle ordonnance</span> 
-                  </a> <a href="#" class="nav_link active"> <i class='bx bx-bookmark nav_icon'></i> 
-                  <span class="nav_name">Gestion des stocks</span> </a> <a href="#" class="nav_link"> 
-                  </a> 
+                  <a href="#" class="nav_link active"> 
+                      <i class='bx bx-bookmark nav_icon'></i> 
+                  <span class="nav_name">Gestion des stocks</span> 
+                </a>  
                </div>
             </div>
          </nav>
@@ -76,7 +74,6 @@ Utilité : Affichage de la liste des stocks
                         <th class="column3">Quantité en stocks</th>
                         <th class="column4">Quantité nécéssaire</th>
                         <th class="column5">Date limite</th>
-                        
                     </tr>
                 </thead>
             </table>
@@ -90,7 +87,6 @@ Utilité : Affichage de la liste des stocks
                     <td class="column3">150 boites</td>
                     <td class="column4">12 boites</td>
                     <td class="column5">22/01/2025</td>
-   
                 </tr>
                 <tr class="row101 body">
                     <td class="column1">1522</td>
