--- a/Fiche_patient/index.html
+++ b/Fiche_patient/index.html
@@ -65,7 +65,7 @@
          <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-               Pathologie du patient
+               Pathologie
                </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -79,8 +79,8 @@
          </div>
          <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
-               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-               Traitement du patient 
+               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+              Traitement
                </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -89,6 +89,22 @@
                   <p>Doliprane</p>
                   <strong>Traitement 2 :</strong>
                   <p>Ventoline</p>
+
+               </div>
+            </div>
+         </div>
+         <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+               Mutuelle
+               </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+               <div class="accordion-body">
+                  <strong>Numéro de Mutuelle</strong>
+                  <p>Pas de Mutuelle</p>
+                  <strong>Nom de Mutuelle</strong>
+                  <p>Pas de Mutuelle</p>
                </div>
             </div>
          </div>
